--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.16)
 
-project(TicTacToe VERSION 0.1 LANGUAGES CXX)
+project(TicTacToe VERSION 1.0 LANGUAGES CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
@@ -11,65 +11,30 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(QT NAMES Qt6 REQUIRED COMPONENTS Widgets)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Network)
 
-set(PROJECT_SOURCES
-        main.cpp
-        application.h
-        application.cpp
-        application.ui
-        Options.cpp
-        Options.h
-        Options.ui
-        resources.qrc
-        game.h
-        game.cpp
-        game.ui
-        gameplay.h
-        gameplay.cpp
-#        chatserver.h
-#        chatserver.cpp
-#        serverworker.h
+find_package(Qt6 REQUIRED COMPONENTS Widgets Network)
+
+add_executable(TicTacToe
+    main.cpp
+    application.h
+    application.cpp
+    application.ui
+    Options.cpp
+    Options.h
+    Options.ui
+    resources.qrc
+    game.h
+    game.cpp
+    game.ui
+    gameplay.h
+    gameplay.cpp
 )
 
-if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(TicTacToe
-        MANUAL_FINALIZATION
-        ${PROJECT_SOURCES}
-    )
-# Define target properties for Android with Qt 6 as:
-#    set_property(TARGET TicTacToe APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
-#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
-# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
-else()
-    if(ANDROID)
-        add_library(TicTacToe SHARED
-            ${PROJECT_SOURCES}
-        )
-# Define properties for Android with Qt 5 after find_package() calls as:
-#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
-    else()
-        add_executable(TicTacToe
-            ${PROJECT_SOURCES}
-        )
-    endif()
-endif()
 
-target_link_libraries(TicTacToe PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(TicTacToe PRIVATE Qt6::Widgets)
+target_link_libraries(TicTacToe PRIVATE Qt6::Network)
 
 set_target_properties(TicTacToe PROPERTIES
-    MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
-    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
-    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
-    MACOSX_BUNDLE TRUE
-    WIN32_EXECUTABLE TRUE
+    MACOSX_BUNDLE ON
+    WIN32_EXECUTABLE ON
 )
-
-install(TARGETS TicTacToe
-    BUNDLE DESTINATION .
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
-
-if(QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(TicTacToe)
-endif()
